# all_reponnn

./: .gitignore  README.md  pom.xml
7/: .gitignore  README.md  acceptance_test.py  generate_test_data.py  gui_integration_test.py  main.py  pyproject.toml  requirements.txt
7/.github/workflows/: ci.yml
7/app/core/: backup_manager.py  compare.py  database.py  models.py  scanner.py
7/app/parsers/: base_parser.py  ini_parser.py  json_parser.py  registry.py
7/app/ui/: action_panel.py  compare_panel.py  field_compare_panel.py  main_window.py  preview_panel.py  save_list.py  text_diff_panel.py
7/data/: save_manager.db
7/plugins/: example_parser.py
7/test_data/Game_000_Elden_Ring/Binaries/: asset_0.pak  asset_1.pak  asset_10.pak  asset_11.pak  asset_12.pak  asset_13.pak  asset_14.pak  asset_15.pak  asset_16.pak  asset_17.pak  asset_18.pak  asset_19.pak  asset_2.pak  asset_20.pak  asset_21.pak  asset_22.pak  asset_23.pak  asset_24.pak  asset_25.pak  asset_26.pak  asset_27.pak  asset_28.pak  asset_29.pak  asset_3.pak  asset_4.pak  asset_5.pak  asset_6.pak  asset_7.pak  asset_8.pak  asset_9.pak
7/test_data/Game_000_Elden_Ring/saves/: slot1.save.json
7/test_data/Game_001_Baldurs_Gate_3/Binaries/: asset_0.pak  asset_1.pak  asset_10.pak  asset_11.pak  asset_12.pak  asset_13.pak  asset_14.pak  asset_15.pak  asset_16.pak  asset_17.pak  asset_18.pak  asset_19.pak  asset_2.pak  asset_20.pak  asset_21.pak  asset_22.pak  asset_23.pak  asset_24.pak  asset_25.pak  asset_26.pak  asset_27.pak  asset_28.pak  asset_29.pak  asset_3.pak  asset_4.pak  asset_5.pak  asset_6.pak  asset_7.pak  asset_8.pak  asset_9.pak
(+2105 files in other folders)
