[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "save-manager"
version = "1.0.0"
description = "单机游戏存档管理器 - 基于 PyQt6 的桌面工具，支持扫描、预览、备份、还原、存档对比"
readme = "README.md"
requires-python = ">=3.9, <4.0"
license = { text = "MIT" }
authors = [{ name = "Save Manager Team" }]
keywords = ["pyqt6", "save-manager", "game-save", "backup", "diff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "PyQt6>=6.6.0,<6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2.0",
    "pyinstaller>=6.0",
]

[project.scripts]
save-manager = "main:main"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
app = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py", "test_*.py"]
addopts = "-v"

[tool.pytest-qt]
qt_api = "pyqt6"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
